# backend/src/server.ts
@@ -44,6 +44,7 @@ import employeeRoutes from "./routes/employee";
 import reviewRoutes from "./routes/review";
 import eventRoutes from "./routes/event";
 import articleRoutes from "./routes/article";
+import servicesRoutes from "./routes/services";
 
 require("dotenv-flow").config();
 
@@ -71,6 +72,7 @@ app.use("/employee", employeeRoutes);
 app.use("/review", reviewRoutes);
 app.use("/event", eventRoutes);
 app.use("/blog", articleRoutes);
+app.use("/services", servicesRoutes);
 
 // Serve static files from the 'dist' directory
 app.use(express.static(path.join(__dirname, "dist"), staticOptions));
